added more versions

--- a/index.html
+++ b/index.html
@@ -8,12 +8,50 @@
 
 <body>
 
-<h1>Ina Grozeva</h1>
-<h2>Multi-Media Designer</h2>
+------------------------------Version 1--------------------------------------
+<br>
+<br>
+<div id="v1">
+  <h1>Ina Grozeva</h1>
+  <h2>Multi-Media Designer</h2>
 
-<a href="https://www.britecore.com"><img src="img/logo.png"></img></a>
-<p><span class="identifier">P:</span> 440-454-0051</p>
-<p><span class="identifier">E:</span> <a href="mailto:ina.grozeva@britecore.com">ina.grozeva@britecore.com</a></p>
+  <a href="https://www.britecore.com" target="_blank"><img class="logo" src="img/logo.png"></img></a>
+  <p><span class="identifier">P:</span> 440-454-0051</p>
+  <p><span class="identifier">E:</span> <a href="mailto:ina.grozeva@britecore.com">ina.grozeva@britecore.com</a></p>
+</div>
+<br>
+<br>
+------------------------------Version 2--------------------------------------
+<br>
+<br>
+<div id="v2">
+  <h1>Ina Grozeva</h1>
+  <h2>Multi-Media Designer</h2>
+  <p><span class="identifier">P:</span> 440-454-0051</p>
+  <p><span class="identifier">E:</span> <a href="mailto:ina.grozeva@britecore.com">ina.grozeva@britecore.com</a></p>
+  <div id="divider"></div>
+  <a href="https://www.britecore.com" target="_blank"><img class="logo" src="img/logo-2.png"></img></a>
+</div>
+
+<br>
+<br>
+
+------------------------------Version 3--------------------------------------
+<br>
+<br>
+<div id="v3">
+  <h1>Ina Grozeva</h1>
+  <h2>Multi-Media Designer</h2>
+  <p><span class="identifier">P:</span> 440-454-0051</p>
+  <p><span class="identifier">E:</span> <a href="mailto:ina.grozeva@britecore.com">ina.grozeva@britecore.com</a></p>
+  <div class="social-table">
+    <a href="https://www.britecore.com" target="_blank"><img class="logo" src="img/logo-3.png"></img></a>
+    <a href="https://www.facebook.com/britecore" target="_blank"><img class="social" src="img/social-01.png"></img></a>
+    <a href="https://www.linkedin.com/company/britecore" target="_blank"><img class="social" src="img/social-02.png"></img></a>
+    <a href="https://twitter.com/britecore" target="_blank"><img class="social" src="img/social-03.png"></img></a>
+  </div>
+</div>
+
 
 
 </body>
