--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
   <p><span class="identifier">P:</span> 440-454-0051</p>
   <p><span class="identifier">E:</span> <a href="mailto:ina.grozeva@britecore.com">ina.grozeva@britecore.com</a></p>
   <div class="social-table">
-    <a href="https://www.britecore.com" target="_blank"><img class="logo" src="img/logo-3.png"></img></a>
-    <a href="https://www.facebook.com/britecore" target="_blank"><img class="social" src="img/social-01.png"></img></a>
-    <a href="https://www.linkedin.com/company/britecore" target="_blank"><img class="social" src="img/social-02.png"></img></a>
-    <a href="https://twitter.com/britecore" target="_blank"><img class="social" src="img/social-03.png"></img></a>
-  </div>
+      <a href="https://www.britecore.com" target="_blank"><img class="logo" src="img/logo-3.png"></img></a>
+    <span class="social-icons">
+      <a href="https://www.facebook.com/britecore" target="_blank"><img class="social" src="img/social-01.png"></img></a>
+      <a href="https://www.linkedin.com/company/britecore" target="_blank"><img class="social" src="img/social-02.png"></img></a>
+      <a href="https://twitter.com/britecore" target="_blank"><img class="social" src="img/social-03.png"></img></a>
+  </span>
 </div>
 
 
