--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <title>BriteCore E-Signature Template</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://use.typekit.net/eoj3hsn.css">
+  <style>
+    @import url("https://use.typekit.net/eoj3hsn.css");
+  </style>
 </head>
 
 <body>
