--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h2>Multi-Media Designer</h2>
   <p><span class="identifier">P:</span> 440-454-0051</p>
   <p><span class="identifier">E:</span> <a href="mailto:ina.grozeva@britecore.com">ina.grozeva@britecore.com</a></p>
-  <a href="https://www.britecore.com" target="_blank"><img class="logo" src="img/logo.png"></img></a>
+  <a href="https://www.britecore.com" target="_blank"><img class="logo" src="img/logo.png"></a>
 </div>
 
 <br>
