--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <br>
   <p>--</p>
   <h1>Ina Grozeva</h1>
-  <h2>Brand Managerr</h2>
+  <h2>Brand Manager</h2>
   <p><span class="identifier">P:</span> 440-454-0051</p>
   <p><span class="identifier">E:</span> <a href="mailto:ina.grozeva@britecore.com">ina.grozeva@britecore.com</a></p>
   <a href="https://www.britecore.com" target="_blank"><img class="logo" src="logo.png"></a>
